DATE       AUTHOR      CHANGE
---------- ----------- --------------------------------------------------------
[1.0.1 released - 8.29.2005]===================================================
2005-08-29 patrickh    NEW VERSION: 1.0.1

[1.0.0 released - 7.5.2005]====================================================
2005-07-05 patrickh    NEW VERSION: 1.0.0
2005-06-15 patrickh    Updated to support Windows 64-bit edition.
                       NEW VERSION: 0.93.1

[1.0 Beta 3 released - 6.7.2005]===============================================
2005-06-07 patrickh    NEW VERSION: 0.93.0
2005-05-02 patrickh    Allow idlj to be used as the IDL-to-Java compiler.
2005-04-01 patrickh    Updated the interface
                       org.vrjuggler.tweek.beans.BeanFocusChangeListener to use
                       a more modern approach.  The method beanFocusChanged()
                       has been split into beanFocused() and beanUnfocused().
                       NEW VERSION 0.92.7
2005-03-21 patrickh    org.vrjuggler.tweek.beans.loader.BeanInstatiationException
                       now supports the Java 1.4 "cause" mechanism for
                       chaining exceptions.
                       NEW VERSION 0.92.6
2005-03-06 patrickh    Removed the Tweek WizardBuilder Bean from the mix.
                       NEW VERSION 0.92.5
2005-02-11 patrickh    Added the capability for Beans to notify the Tweek Java
                       GUI about undo/redo operations and cut/copy/paste
                       operations that they perform themselves.
                       NEW VERSION 0.92.4
2005-02-10 patrickh    Extended org.vrjuggler.tweek.beans.FileLoader to allow
                       save-all operations and to allow for testing for unsaved
                       changes.  Added the capability for Beans to notify the
                       Tweek Java GUI about file operations (open, close, save,
                       etc.) that they perform themselves.